--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <div id="asdf" class="w3-bar-block">
         <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
            onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i> Close Menu </a>
-        <a href="#1" id="userBar" onclick="barClick(this,1); return false;"
-           class="w3-bar-item w3-button w3-padding w3-blue w3-hide"><i class="fa fa-users fa-fw"></i> User </a>
+        <!--<a href="#1" id="userBar" onclick="barClick(this,1); return false;"-->
+           <!--class="w3-bar-item w3-button w3-padding w3-blue w3-hide"><i class="fa fa-users fa-fw"></i> User </a>-->
         <a href="#2" id="serverBar" onclick="barClick(this,2); return false;"
            class="w3-bar-item w3-button w3-padding"><i class="fa fa-align-justify fa-fw"></i> Server </a>
         <a href="#3" id="statBar" onclick="barClick(this,3); return false;"
