--- a/index.html
+++ b/index.html
@@ -36,23 +36,17 @@
     <div class="w3-container">
         <h5>Dashboard</h5>
     </div>
-    <div id="asdf" class="w3-bar-block">
-        <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black"
-           onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i> Close Menu </a>
-        <!--<a href="#1" id="userBar" onclick="barClick(this,1); return false;"-->
-           <!--class="w3-bar-item w3-button w3-padding w3-blue w3-hide"><i class="fa fa-users fa-fw"></i> User </a>-->
+    <div id="asdf" class="w3-bar-block"><a href="#1" id="addBar" onclick="barClick(this,1); return false;"
+           class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Add </a>
         <a href="#2" id="serverBar" onclick="barClick(this,2); return false;"
            class="w3-bar-item w3-button w3-padding"><i class="fa fa-align-justify fa-fw"></i> Server </a>
         <a href="#3" id="statBar" onclick="barClick(this,3); return false;"
-           class="w3-bar-item w3-button w3-padding"><i class="fa fa-bar-chart fa-fw"></i> Statistic </a>
+           class="w3-bar-item w3-button w3-padding"><i class="fa fa-pie-chart fa-fw"></i> Statistic </a>
         <a href="#4" id="monitorBar" onclick="barClick(this,5); return false;"
-           class="w3-bar-item w3-button w3-padding"><i class="fa fa-refresh fa-fw"></i> Monitor</a><br><br>
+           class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-refresh fa-fw"></i> Monitor</a><br><br>
     </div>
 </nav>
 
-<!--Sidebar on small screen-->
-<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer"
-     title="close side menu" id="myOverlay"></div>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:200px;margin-top:43px;" id="content">
