--- a/monitor.html
+++ b/monitor.html
@@ -5,8 +5,8 @@
     <h2><b><i class="fa fa-refresh"></i> Monitor</b></h2>
 </header>
 <!--Usage statistic-->
-<div class="w3-container w3-margin">
-    <input id="idInput" class="w3-input w3-margin" type="text">
+<div class="w3-container w3-margin" >
+    <input id="idInput" class="w3-input w3-margin" type="text"  style="max-width:300px;">
     <p>
         <button class="w3-button w3-black w3-round" onclick="getInfo()">search</button>
     </p>
