--- a/test.html
+++ b/test.html
@@ -11,6 +11,8 @@
   <script src="jasmine/lib/jasmine-2.8.0/jasmine-html.js"></script>
   <script src="jasmine/lib/jasmine-2.8.0/boot.js"></script>
 
+  <a href="#1" id="addBar" onclick="barClick(this,1); return false;"
+     class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Add </a>
   <a href="#2" id="serverBar" onclick="barClick(this,2); return false;"
      class="w3-bar-item w3-button w3-padding"><i class="fa fa-align-justify fa-fw"></i> Server </a>
   <a href="#3" id="statBar" onclick="barClick(this,3); return false;"
