--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h5>Dashboard</h5>
     </div>
     <div id="asdf" class="w3-bar-block"><a href="#1" id="addBar" onclick="barClick(this,1); return false;"
-           class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Add </a>
+           class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i> Add </a>
         <a href="#2" id="serverBar" onclick="barClick(this,2); return false;"
            class="w3-bar-item w3-button w3-padding"><i class="fa fa-align-justify fa-fw"></i> Server </a>
         <a href="#3" id="statBar" onclick="barClick(this,3); return false;"
